--- a/resume/index.html
+++ b/resume/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="profile-card-text">
                         <p class="bt">吴长新</p>
-                        <p>web前端工程师</p>
+                        <p>前端工程师</p>
                     </div>
                 </div>
                 <div class="contact-details">
@@ -76,7 +76,7 @@
                     </div>
                     <dl class="info content">
                         <dt class="header">
-                            <p>武汉永乐云商 <span>web前端工程师</span></p>
+                            <p>武汉永乐云商 <span>前端工程师</span></p>
                             <p class="text-muted">2015.12 - 至今</p>
                         </dt>
                         <dd>
@@ -87,20 +87,20 @@
                                 <li>微信小程序开发，使用微信jssdk开发微信内嵌网页</li>
                                 <li>使用vue.js全家桶，对接后端restful api，浏览器端渲染页面，实施前后端分离，提升用户体验，和开发效率</li>
                                 <li>负责配合后台开发人员，完成页面的交互及接口对接，数据渲染</li>
-                                <li>负责前端技术的完善，以用户为中心，不断尝试前端新技术，提升团队水平</li>
+                                <li>负责前端技术的完善，为提高用户体验，不断尝试前端新技术，提升团队水平</li>
                             </ul>
                         </dd>
                     </dl>
                     <dl class="info content">
                         <dt class="header">
-                            <p>武汉纺友技术有限公司<span>web前端工程师</span></p>
+                            <p>武汉纺友技术有限公司<span>前端工程师</span></p>
                             <p class="text-muted">2015.03 - 2015.12</p>
                         </dt>
                         <dd>
                             <ul>
                                 <li>根据UI设计稿编写静态页面</li>
                                 <li>使用gulp管理维护前端代码</li>
-                                <li>jquery/zepto 数据处理、Ajax 交互开发、前端公共组件开发</li>
+                                <li>jquery/zepto 数据处理、Ajax交互开发、前端公共组件开发</li>
                                 <li>负责配合后台开发人员，完成页面的交互及接口对接</li>
                                 <li>根据需求封装通用js插件</li>
                             </ul>
@@ -108,7 +108,7 @@
                     </dl>
                     <dl class="info content">
                         <dt class="header">
-                            <p>上海昕鼎网络科技有限公司<span>web前端工程师</span></p>
+                            <p>上海昕鼎网络科技有限公司<span>前端工程师</span></p>
                             <p class="text-muted">2013.11 - 2015.02</p>
                         </dt>
                         <dd>
@@ -133,14 +133,13 @@
                             <p>永乐惠充app</p>
                             <p class="common-p">技术：cordova + jquery + gulp + less + nginx + shell + https</p>
                         </dt>
-                        <dd>描述：提供给公司代理商使用的手机app</dd>
                         <dd>
                             <ul>
                                 <li>将app所有页面换成纯静态html页面交互</li>
                                 <li>测试ios\Android开发的cordova原生功能插件，将这些插件封装成便于使用js函数</li>
                                 <li>本地mock数据实现页面交互、数据绑定、数据提交、文件上传、在线支付等功能</li>
                                 <li>接入后端restful api,放到测试环境、测试联调</li>
-                                <li>生产环境，使用nginx代码部署在阿里云上</li>
+                                <li>生产环境，使用nginx代码部署在阿里云上，反向代理后端api</li>
                             </ul>
                         </dd>
                     </dl>
@@ -151,54 +150,64 @@
                         </dt>
                         <dd>
                             <ul>
-                                <li>使用vue-cli开发</li>
-                                <li>独自mock数据实现页面交互、数据绑定、数据提交、文件上传、在线支付等功能</li>
-                                <li>接入后端、测试联调</li>
+                                <li>使用vue，elementUI开发 后台管理系统单页面应用</li>
+                                <li>开发vue通用公共UI组件，控制代码冗余</li>
+                                <li>本地配反向代理后端restful api，前后端同步开发</li>
+                                <li>根据角色权限不同渲染组件功能按钮显示</li>
+                                <li>实现系统各项数据增删改查功能</li>
+                                <li>测试联调部署上线</li>
                             </ul>
                         </dd>
                     </dl>
                     <dl class="info content">
                         <dt class="header">
                             <p>永乐惠充微信小程序</p>
+                            <p class="common-p">技术：微信小程序api + 微信开发者工具</p>
                         </dt>
                         <dd>
                             <ul>
-                                <li>Photoshop对UI设计图进行切片，小程序界面实现</li>
-                                <li>独自mock数据实现页面交互、数据绑定、数据提交、文件上传、在线支付等功能</li>
-                                <li>接入后端、测试联调</li>
+                                <li>Photoshop对UI设计图进行切片，小程序界面交互实现</li>
+                                <li>独自mock数据实现模拟登录、数据绑定、数据提交、文件上传、在线支付等功能</li>
+                                <li>接入后端restful api、测试联调</li>
                             </ul>
                         </dd>
                     </dl>
                     <dl class="info content">
                         <dt class="header">
-                            <p>永乐收钱宝</p>
-                            <p class="common-p">技术：jquery + jsp</p>
+                            <p>永乐融通支付产品</p>
+                            <p class="common-p">技术：bootstrap + jquery + ngiax + gulp</p>
                         </dt>
                         <dd>
                             <ul>
-                                <li>......</li>
+                                <li>jquery版前后端分离项目，前端所有数据功都使用ajax获取</li>
+                                <li>封装通用jquery插件</li>
+                                <li>反向代理，登录获取token，session storage缓存token，方便页面之间共享</li>
                             </ul>
                         </dd>
                     </dl>
                     <dl class="info content">
                         <dt class="header">
-                            <p>怡乐购pc端</p>
-                            <p class="common-p">技术：jquery + jsp</p>
+                            <p>怡乐购ios客户端</p>
+                            <p class="common-p">技术：framework7 + <a href="http://www.html5plus.org/doc/zh_cn/accelerometer.html">html5+</a></p>
                         </dt>
                         <dd>
                             <ul>
-                                <li>......</li>
+                                <li>根据产品UI设计图 使用DOM7实现单页面交互</li>
+                                <li>本地mock数据实现商品数据渲染、展示、排序、及订单数据提交</li>
+                                <li>使用session storge缓存token</li>
                             </ul>
                         </dd>
                     </dl>
                     <dl class="info content">
                         <dt class="header">
-                            <p>怡乐购app</p>
-                            <p class="common-p">技术：jquery + jsp</p>
+                            <p>怡乐购pc端 —— b2b平台</p>
+                            <p class="common-p">技术：jquery + jsp + tomcat</p>
                         </dt>
                         <dd>
                             <ul>
-                                <li>......</li>
+                                <li>根据产品UI设计图 切图</li>
+                                <li>接入restful接口的jsp页面上用js填充数据</li>
+                                <li></li>
                             </ul>
                         </dd>
                     </dl>
@@ -209,20 +218,33 @@
                         </dt>
                         <dd>
                             <ul>
-                                <li>......</li>
+                                <li>根据产品UI设计图 切图</li>
+                                <li>接入restful接口的页面js业务完成好</li>
+                                <li>使用微信JSSDK调用微信支付，图片拍照，上传功能</li>
                             </ul>
                         </dd>
                     </dl>
                     <dl class="info content">
                         <dt class="header">
-                            <p>永乐生活代理商前台</p>
-                            <p class="common-p">技术：jquery + jsp + shell + ftp + svn</p>
+                            <p>永乐生活代理商前台 + 永乐生活代后台管理系统</p>
+                            <p class="common-p">技术：jquery + easyUI + jsp + shell + ftp + svn</p>
                         </dt>
                         <dd>
                             <ul>
-                                <li>公司代理商平台日常维护</li>
-                                <li>长期的功能迭代</li>
-                                <li>......</li>
+                                <li>公司代理商平台，后端管理平台前端代码日常维护</li>
+                                <li>长期的新功能迭代升级</li>
+                                <li>平台各种活动页面</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>node.js + MongoDB博客个人平台</p>
+                            <p class="common-p">技术：node.js + MongoDB + jade模板引擎 + RoboMongo</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>数据爬虫,后台登录及文章管理</li>
                             </ul>
                         </dd>
                     </dl>
@@ -321,7 +343,7 @@
                 user:{
                     name:'炖萝卜',
                     location:'武汉',
-                    job:'挨踢民工'
+                    job:'前端工程师'
                 },
                 baseInfo:[
                     {
@@ -353,6 +375,7 @@
                     {proName:'永乐惠充微信小程序'},
                     {proName:'怡乐购pc端'},
                     {proName:'怡乐购微信端'},
+                    {proName:'山西长城宽带微信商城'},
                     {proName:'怡乐购app'}
                 ]
             }
