--- a/resume/index.html
+++ b/resume/index.html
@@ -57,6 +57,7 @@
                     <ul class="info content mop-wrapper">
                         <li>个人主攻 web 前端开发，4年+前端开发经验。</li>
                         <li>熟练掌握 使用vue.js前端技术,周边ui组件库</li>
+                        <li>熟系react.js使用及组件开发</li>
                         <li>了解并掌握cordova混合开发，以及纯前端+官方插件的直接使用前端技术开发app</li>
                         <li>喜欢关注 web 前端相关新技术，对于新技术有很强的学习兴趣。喜欢折腾造轮子，不定时更新 github 小项目。</li>
                         <li>热爱前端这份工作，也热爱一切美好的事物，对于我来说，是一种责任、是一种快乐。</li>
@@ -161,12 +162,12 @@
                     </dl>
                     <dl class="info content">
                         <dt class="header">
-                            <p>永乐惠充微信小程序</p>
+                            <p>永乐惠充微信小程序，超伙物流动态小程序</p>
                             <p class="common-p">技术：微信小程序api + 微信开发者工具</p>
                         </dt>
                         <dd>
                             <ul>
-                                <li>Photoshop对UI设计图进行切片，小程序界面交互实现</li>
+                                <li>Photoshop对UI设计图进行切片，根据产品需求完成小程序界面交互实现</li>
                                 <li>独自mock数据实现模拟登录、数据绑定、数据提交、文件上传、在线支付等功能</li>
                                 <li>接入后端restful api、测试联调</li>
                             </ul>
@@ -188,7 +189,7 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>怡乐购ios客户端</p>
-                            <p class="common-p">技术：framework7 + <a href="http://www.html5plus.org/doc/zh_cn/accelerometer.html">html5+</a></p>
+                            <p class="common-p">技术：framework7 + Hbuilder +<a href="http://www.html5plus.org/doc/zh_cn/accelerometer.html"> html5+</a></p>
                         </dt>
                         <dd>
                             <ul>
