--- a/resume/index.html
+++ b/resume/index.html
@@ -55,7 +55,7 @@
                         <i class="fs-lg icon-board"></i><span class="mobile-title">自我描述</span>
                     </div>
                     <ul class="info content mop-wrapper">
-                        <li>个人主攻 web 前端开发，4年+前端开发经验。</li>
+                        <li>个人主攻 web 前端开发，4年+前端开发经验（3年jquery+1年vue）</li>
                         <li>熟练掌握 使用vue.js前端技术,周边ui组件库</li>
                         <li>熟系react.js使用及组件开发</li>
                         <li>了解并掌握cordova混合开发，以及纯前端+官方插件的直接使用前端技术开发app</li>
