--- a/resume/index.html
+++ b/resume/index.html
@@ -288,6 +288,34 @@
                             </ul>
                         </dd>
                     </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p><a href="http://www.ahkaogu.com/">安徽考古研究所</a></p>
+                            <p class="common-p">技术：jquery + html + css + flash</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>Photoshop对设计图进行切片</li>
+                                <li>根据设计提供的设计稿编写静态页面</li>
+                                <li>HTML+CSS编写网站页面，并保证浏览器的兼容性</li>
+                                <li>负责配合后台开发人员，完成页面的js交互动画</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p><a href="http://www.ccbdd.com/2014/">爬虫社网站改版</a></p>
+                            <p class="common-p">技术：jquery + html + css + flash</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>Photoshop对设计图进行切片</li>
+                                <li>根据设计提供的设计稿编写静态页面</li>
+                                <li>HTML+CSS编写网站页面，并保证浏览器的兼容性</li>
+                                <li>负责配合后台开发人员，完成页面的js交互动画</li>
+                            </ul>
+                        </dd>
+                    </dl>
                 </div>
             </div>
             <a href="../吴长新-前端开发-个人简历.pdf" class="dlown">下载</a>
