--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -269,6 +269,19 @@
                     </dl>
                     <dl class="info content">
                         <dt class="header">
+                            <p><a href="http://www.ahkaogu.com/">安徽考古研究所</a></p>
+                            <p class="common-p">技术：jquery + html + css + flash</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>公司代理商平台，后端管理平台前端代码日常维护</li>
+                                <li>长期的新功能迭代升级</li>
+                                <li>平台各种活动页面</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
                             <p>node.js + MongoDB博客个人平台</p>
                             <p class="common-p">技术：node.js + MongoDB + jade模板引擎 + RoboMongo</p>
                         </dt>
