--- a/resume/index.html
+++ b/resume/index.html
@@ -304,7 +304,7 @@
                     </dl>
                     <dl class="info content">
                         <dt class="header">
-                            <p><a href="http://www.ccbdd.com/2014/">爬虫社网站改版</a></p>
+                            <p><a href="http://www.qjtrip.com/">千景网</a></p>
                             <p class="common-p">技术：jquery + html + css + flash</p>
                         </dt>
                         <dd>
