--- a/resume/index.html
+++ b/resume/index.html
@@ -290,7 +290,7 @@
                     </dl>
                     <dl class="info content">
                         <dt class="header">
-                            <p><a href="http://www.ahkaogu.com/">安徽考古研究所</a></p>
+                            <p><a href="http://www.ccbdd.com/2014/">爬虫社</a></p>
                             <p class="common-p">技术：jquery + html + css + flash</p>
                         </dt>
                         <dd>
